# eww_prayer_times

./: Cargo.toml  LICENSE  README.md
eww/: eww.scss  eww.yuck
src/: main.rs
