[package]
name = "prayertime"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = "0.4.42"
clap = { version = "4.5.51", features = ["derive"] }
notify-rust = "4.11.7"
rust-embed = { version = "8.8.0", features = ["include-exclude"] }
salah = "0.7.5"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
